--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,10 @@ body {
   display: none;
 }
 
+#formHolder {
+  text-align: center;
+}
+
 #planetsHolder {
   display: flex;
   flex-direction: row;
@@ -14,12 +18,13 @@ body {
 
 .planetHolder {
   width: 20%;
-  background-color: pink;
-  border-color: aqua;
-  border-style: dashed;
+  text-align: center;
 }
 
 .planetGIF {
   width: auto;
   height: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
