WIP commit while working on getting cdnfont loaded
Currently functional, but shouldn't be loaded via link href

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,14 @@ body {
   display: none;
 }
 
+#title {
+  font-family: 'SF Distant Galaxy', sans-serif;
+}
+
+#largerTitle {
+  font-size: 120%;
+}
+
 #formHolder {
   text-align: center;
 }
